fix overflows

--- a/components/UI/Header/Header.module.css
+++ b/components/UI/Header/Header.module.css
@@ -2,7 +2,12 @@
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
-    line-height: 28px;
+    /* line-height: 32px; */
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .subheader {
@@ -15,7 +20,7 @@
 .container {
     display: grid;
 
-    grid-template-columns: 1fr 150px;
+    grid-template-columns: 1fr auto;
 }
 
 .cta {
